--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,8 +11,8 @@
 
 
 
-
-@if (!isAuthenticated) {
+<h1>Hello world</h1>
+<!-- @if (!isAuthenticated) {
   <div>
   <h1>Home page</h1>
   <p>this is the home page for media tracker</p>
@@ -23,10 +23,10 @@
   <div>
     <h1>Ur locked in vro</h1>
     <a [attr.href]="baseURL + '/logout'">Logout</a>
-  </div>
+  </div> -->
 
 
-}
+<!-- } -->
 
 
 <router-outlet />
