--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -23,10 +23,10 @@
   <div>
     <h1>Ur locked in vro</h1>
     <a [attr.href]="baseURL + '/logout'">Logout</a>
-  </div> -->
+  </div>
 
 
-<!-- } -->
+} -->
 
 
 <router-outlet />
