--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -12,7 +12,7 @@
 
 
 <h1>Hello world</h1>
-<!-- @if (!isAuthenticated) {
+@if (!isAuthenticated) {
   <div>
   <h1>Home page</h1>
   <p>this is the home page for media tracker</p>
@@ -24,9 +24,7 @@
     <h1>Ur locked in vro</h1>
     <a [attr.href]="baseURL + '/logout'">Logout</a>
   </div>
-
-
-} -->
+}
 
 
 <router-outlet />
