--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,20 +11,17 @@
 
 
 
-@if (!isAuthenticated) {
-  <div>
-  <h1>Home page</h1>
-  <p>this is the home page for media tracker</p>
-  <a [attr.href]="baseURL + '/login'">Login</a>
-  </div>
-} @else {
-
-  <div>
-    <h1>Ur locked in vro</h1>
-    <a [attr.href]="baseURL + '/profile'">Profile</a>
-    <a [attr.href]="baseURL + '/logout'">Logout</a>
-  </div>
-}
+<div>
+  <h1>Auth0 Authentication with Angular</h1>
+  @if (!(auth.isAuthenticated$ | async)) {
+    <app-login-button></app-login-button>
+  } @else {
+    <h2>Ur locked in vro</h2>
+    <app-user-profile></app-user-profile>
+    <app-logout-button></app-logout-button>
+    
+  }
+</div>
 
 
 <router-outlet />
