added music, movie components and updated routes

--- a/client/src/app/collections/collections.component.html
+++ b/client/src/app/collections/collections.component.html
@@ -1,1 +1,6 @@
-<p>collections works!</p>
+<h2>Dashboard of your media</h2>
+<p>(Breakdown of all the media you consume)</p>
+<a routerLink="/movies">Movies</a>
+<p></p>
+<a routerLink="/music">Music</a>
+
