--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
-<ul>
-    <li>{{ user_info.name }}</li>
-    <li>{{user_info.email}}</li>
-</ul>`
+
+
+<h2>Welcome, {{user_info.name}}.</h2>
+
 
 <router-outlet></router-outlet>
