created wishlist service and enabled remove functionality on frontend

--- a/client/src/app/movies/movies.component.html
+++ b/client/src/app/movies/movies.component.html
@@ -1,2 +1,13 @@
-<h2>Breakdown of movies</h2>
-
+<div>
+    <h3>Wishlist</h3>
+    <ul>
+      @for (movie of wishlist; track movie)
+      {
+        <li>
+          {{ movie }}
+          <button (click)="toggleWishlist(movie, false)">Remove</button>
+        </li>
+      }
+    </ul>
+  </div>
+  
