--- a/client/src/app/collections/collections.component.html
+++ b/client/src/app/collections/collections.component.html
@@ -1,5 +1,5 @@
 <h2>Dashboard of your media</h2>
-<p>(Breakdown of all the media you consume)</p>
+<p>(Include some aggregations of statistics here and links to explore media types in more detail)</p>
 <a routerLink="/movies">Movies</a>
 <p></p>
 <a routerLink="/music">Music</a>
