--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -10,9 +10,9 @@
       <li>
         <a routerLink="/collections" routerLinkActive="active">Collections</a>
       </li>
-      <li><app-logout-button></app-logout-button></li>
+      <li><app-logout></app-logout></li>
       } @else {
-          <app-login-button></app-login-button>
+          <app-login></app-login>
       }
     </ul>
   </div>
