--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,8 +1,8 @@
 
 
 <div class="welcome">
-@if (user_info.name) {
-    <h2>Welcome, {{user_info.name}}.</h2>
+@if (this.name) {
+    <h2>Welcome, {{this.name}}.</h2>
     } @else {
     <h2>Loading</h2>
 
