--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -12,5 +12,15 @@
 
 <app-navbar></app-navbar>
 
+<div class="home-container">
+    <h1 class="headline">All your media organized in one place</h1>
+    <p class="description">
+      Media Tracker brings together your favorite content across platforms. By using your Spotify listening statistics, we provide personalized insights into your music habits and combine them with your own input on movies, video games, and books to deliver a unified view of your entertainment life.
+    </p>
+    <p class="description">
+      Whether you're tracking your recent reads, favorite directors, or how many hours you’ve sunk into gaming, Media Tracker helps you visualize and reflect on it all in one clean dashboard.
+    </p>
+  </div>
+  
 
 <router-outlet/>
