--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -5,8 +5,10 @@
     <h2>Welcome, {{this.name}}.</h2>
     } @else {
     <h2>Loading</h2>
-
-
     }
+</div>
+
+<div class="spotify-stats">
+    <app-music></app-music>
 </div>
 <router-outlet></router-outlet>
